<resources>
    <string name="app_name">Reef Return</string>
    <string name="welcome">Welcome!</string>
    <string name="logo">Coral Restoration Foundation Logo</string>
    <string name="signIn">Sign In</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="exampleEmail">example@coralRestoration.com</string>
    <string name="passwordHint">***********</string>
    <string name="logIn">Login</string>
    <string name="forgotPassword"><u>Forgot Password?</u></string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">Title</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="support">Support</string>
    <string name="FORGOTPASSWORD">Forgot Password</string>
    <string name="resetPassword">Reset Password</string>
    <string name="subject">Subject:</string>
    <string name="commentsIssues">Comments/Issues</string>
    <string name="submit">Submit</string>
    <string name="coralReefImages">Coral Reef Images</string>
    <string name="logout">Logout</string>
    <string name="newCoralEntry">New Coral Entry</string>
    <string name="dataAnalysis">Data Analysis</string>
    <string name="coralReefDatabase">Coral Reef Database</string>
    <string name="reefName">Reef Name:</string>
    <string name="reefOfName">Name of Reef</string>
    <string name="newDataEntry">New Data Entry</string>
    <string name="coralName">Coral Name:</string>
    <string name="waveSize">Wave Size:</string>
    <string name="waterTurbidity">Water\nTurbidity:\n(NTU)</string>
    <string name="twoHundredFifty">250</string>
    <string name="hundred">100</string>
    <string name="fifty">50</string>
    <string name="twentyFive">25</string>
    <string name="ten">10</string>
    <string name="salinity">Salinity:</string>
    <string name="fresh">Fresh</string>
    <string name="marginal">Marginal</string>
    <string name="brackish">Brackish</string>
    <string name="saline">Saline</string>
    <string name="brine">Brine</string>
    <string name="waterTemperature">Water\nTemperature:</string>
    <string name="airTemperature">Air\nTemperature:</string>
    <string name="cloudCoverage">Cloud\nCoverage:</string>
    <string name="coordinates">Coordinates:</string>
    <string name="uploadImages">Upload Images</string>
    <string name="coralEntries">Coral Entries</string>
    <string name="user">User:</string>
    <string name="numOfImages">Number of Images:</string>
    <string name="enteredBy">Entered By:</string>
    <string name="name">Name:</string>
    <string name="fullName">Full Name</string>
    <string name="phoneNumber">Phone Number:</string>
    <string name="phoneNum">Phone Number</string>
    <string name="phoneEx">***-***-****</string>
    <string name="date">Date:</string>
    <string name="airTemp">Air Temperature:</string>
    <string name="waterTemp">Water Temperature:</string>
    <string name="waterTurb">Water Turbidity:</string>
    <string name="cloudCov">Cloud Coverage:</string>
    <string name="waveHeight">Wave Height:</string>
    <string name="humidity">Humidity:</string>
    <string name="windDirection">Wind Direction:</string>
    <string name="windSpeed">Wind Speed:</string>
    <string name="accuracy">Location\nAccuracy:</string>
    <string name="image">Image</string>
    <string name="largeImage">Large Image</string>
    <string name="useCamera">Use Camera</string>
    <string name="searchEntries">Search Entries</string>
    <string name="noResultsFound">No Results Found</string>
    <string name="locationAccuracy">Location Accuracy:</string>
    <string name="waterTubidity">Water Turbidity:</string>
    <string name="numCorals">Number of Corals:</string>
    <string name="weatherData">Weather Data</string>
    <string name="oceanData">Ocean Data</string>
    <string name="images">Images</string>
    <string name="details">Details</string>
    <string name="selectLocations">Select Locations</string>
    <string name="craysFort">CarysFort Reef</string>
    <string name="coffinsPatch">Coffins Patch</string>
    <string name="grecianRocks">Grecian Rocks</string>
    <string name="looeKey">Looe Key</string>
    <string name="northDryRocks">North Dry Rocks</string>
    <string name="picklesReef">Pickles Reef</string>
    <string name="sombreroReef">Sombrero Reef</string>
    <string name="selectCorals">Select Corals</string>
    <string name="staghorn">Staghorn</string>
    <string name="elkhorn">Elkhorn</string>
    <string name="selectAll">Select All</string>
    <string name="numCoralss">Number Of Corals</string>
    <string name="waterTempe">Water Temperature</string>
    <string name="airTempe">Air Temperature</string>
    <string name="salini">Salinity</string>
    <string name="cloudCove">Cloud Coverage</string>
    <string name="humidi">Humidity</string>
    <string-array name="reefNames">
        <item></item>
        <item>CarysFort Reef</item>
        <item>Coffins Patch</item>
        <item>Grecian Rocks</item>
        <item>Looe Key</item>
        <item>North Dry Rocks</item>
        <item>Pickles Reef</item>
        <item>Sombrero Reef</item>
    </string-array>
    <string-array name="coralNames">
        <item></item>
        <item>Staghorn</item>
        <item>Elkhorn</item>
    </string-array>
    <string-array name="waterTemps">
        <item>F</item>
    </string-array>
</resources>