<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataEntryFragment" >

    <Spinner
        android:id="@+id/spinnerReefName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_border"
        android:entries="@array/reefNames"
        android:labelFor="@id/textViewReefName"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewReefName"
        app:layout_constraintTop_toBottomOf="@+id/textViewNewDataEntry"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textViewReefName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/reefName"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNewDataEntry"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textViewNewDataEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/newDataEntry"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCoralName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/coralName"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewReefName" />

    <Spinner
        android:id="@+id/spinnerCoralNames"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_border"
        android:entries="@array/coralNames"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewCoralName"
        app:layout_constraintTop_toBottomOf="@+id/spinnerReefName" />

    <TextView
        android:id="@+id/textViewWaterTurbidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/waterTurbidity"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWaterTemp" />

    <RadioGroup
        android:id="@+id/radioGroupWaterTurb"
        android:layout_width="298dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:checkedButton="@id/radioButton10"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewWaterTurbidity"
        app:layout_constraintTop_toBottomOf="@+id/textViewWaterTemp">

        <RadioButton
            android:id="@+id/radioButton10"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:text="@string/ten" />

        <RadioButton
            android:id="@+id/radioButton25"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:text="@string/twentyFive" />

        <RadioButton
            android:id="@+id/radioButton50"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:text="@string/fifty" />

        <RadioButton
            android:id="@+id/radioButton100"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:text="@string/hundred" />

        <RadioButton
            android:id="@+id/radioButton250"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twoHundredFifty" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewSalinity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/salinity"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupWaterTurb" />

    <RadioGroup
        android:id="@+id/radioGroupSalinity"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSalinity">

        <RadioButton
            android:id="@+id/radioButtonFresh"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/fresh" />

        <RadioButton
            android:id="@+id/radioButtonMarginal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/marginal" />

        <RadioButton
            android:id="@+id/radioButtonBrackish"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/brackish" />

        <RadioButton
            android:id="@+id/radioButtonSaline"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/saline" />

        <RadioButton
            android:id="@+id/radioButtonBrine"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/brine" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewWaterTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/waterTemperature"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCoralNames" />

    <Spinner
        android:id="@+id/spinnerWaterTemp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_border"
        android:entries="@array/waterTemps"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/textViewWaterTemp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCoralNames"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/airTemperature"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/spinnerWaterTemp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCoralNames" />

    <TextView
        android:id="@+id/textViewShowAirTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCoralNames" />

    <Button
        android:id="@+id/buttonUploadImages"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="125dp"
        android:backgroundTint="#CFC7C7"
        android:text="@string/uploadImages"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddEntrySubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonAddEntrySubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#CFC7C7"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewCloudCoverage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/cloudCoverage"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupSalinity" />

    <TextView
        android:id="@+id/textViewShowCloudCoverage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textViewCloudCoverage"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupSalinity" />

    <TextView
        android:id="@+id/textViewCoordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="125dp"
        android:text="@string/coordinates"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupSalinity" />

    <TextView
        android:id="@+id/textViewShowCoordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textViewCoordinates"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupSalinity" />

</androidx.constraintlayout.widget.ConstraintLayout>